# santander-python-sdk

./: .gitignore  README.MD  README.md  pyproject.toml  requirements.txt
.github/workflows/: test.yml
santander_client/: __init__.py  pix.py  santander_types.py  types.py
santander_client/api_client/: __init__.py  abstract_client.py  client.py  client_configuration.py  exceptions.py  helpers.py  logger.py  workspaces.py
santander_sdk/: __init__.py  barcode_payment.py  payment_receipts.py  pix.py  transfer_flow.py  types.py
santander_sdk/api_client/: abstract_client.py  auth.py  client.py  exceptions.py  helpers.py  workspaces.py
santander_sdk/typing/: receipts_types.py
tests/: conftest.py  test_auth.py  test_auth_unit.py  test_barcode_integration.py  test_client.py  test_client_configuration.py  test_client_unit.py  test_helpers.py  test_helpers_unit.py  test_init.py  test_pix.py  test_pix_integration.py  test_pix_unit.py  test_transfer_flow_unit.py  test_workspaces.py  test_workspaces_unit.py
tests/mock/: santander_mocker.py
